Add Model.cpp to the build this has code to separate a TriangleMesh by its materials into a TriangleMeshModel

--- a/cpp/open3d/visualization/CMakeLists.txt
+++ b/cpp/open3d/visualization/CMakeLists.txt
@@ -44,6 +44,7 @@ target_sources(visualization PRIVATE
 
 target_sources(visualization PRIVATE
     rendering/Material.cpp  # For RPC serialization
+    rendering/Model.cpp  # For Mesh IO
 )
 
 if (BUILD_GUI)
