--- a/docker/Dockerfile.wheel
+++ b/docker/Dockerfile.wheel
@@ -125,7 +125,8 @@ WORKDIR /root/Open3D
 # Build python wheel
 RUN export NPROC=$(nproc) \
  && export BUILD_SHARED_LIBS=OFF \
- && export BUILD_TENSORFLOW_OPS=ON \
+ # TODO: re-enable tensorflow support, off due to due to cxx11_abi issue with PyTorch
+ && export BUILD_TENSORFLOW_OPS=OFF \
  && export BUILD_PYTORCH_OPS=ON \
  && source /root/Open3D/util/ci_utils.sh \
  && build_pip_package build_azure_kinect build_jupyter
