--- a/.github/workflows/ubuntu-wheel.yml
+++ b/.github/workflows/ubuntu-wheel.yml
@@ -132,7 +132,7 @@ jobs:
       - name: Checkout Open3D-ML source code
         uses: actions/checkout@v3
         with:
-          repository: isl-org/Open3D-ML
+          repository: OlivierLDff/Open3D-ML
           path: ${{ env.OPEN3D_ML_ROOT }}
       - name: Download wheels
         uses: actions/download-artifact@v3
